# rory_common

./: .env  .env.test  .gitignore  README.md  deploy_storage.sh  publish.sh  pyproject.toml  run_tests.sh  storage.yml  zensical.toml
.github/workflows/: ci.yml  run_test.yml
docs/: api-reference.md  index.md  storage-compatibility.md
scripts/: keygen.py
src/rorycommon/: __init__.py  utils.py
src/rorycommon/models/: __init__.py
tests/: conftest.py  pytest.ini  test_ckks.py  test_common.py  test_kmeans.py  test_lazy_read.py  test_new_api.py  test_phe.py  test_put_get_matrix.py  test_put_get_ops.py  test_segment_encrypt.py  test_storage_backend.py  test_vector.py  x.ipynb
