[project]
name = "rorycommon"
version = "0.2.0-alpha.0"
description = ""
authors = [
    {name = "Ignacio Castillo",email = "ignacio.bcastillo@gmail.com"},
    {name ="Shanel Reyes", email = "shanelreyesp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = ">=2.2.3,<3.0.0"
numpy = ">=2.2.4"
pytest = ">=8.4.1,<9.0.0"
mictlanx = "0.1.0a5"
phe = "^1.5.0"
pyfhel = "3.5.0"
python-dotenv = "^1.2.2"
rory = {version = "0.1.3", source = "testpypi"}

[tool.poetry]
packages = [{include = "rorycommon", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"
ipykernel = "^6.29.5"
pytest = "^8.4.1"
seaborn = "^0.13.2"
zensical = "^0.0.24"
mkdocstrings-python = "^2.0.3"
coverage = "^7.13.4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"


[tool.pytest.ini_options]
asyncio_mode = "auto"